H.1.3.1 CATS-1257 transaction entry issue for the change SI for a dispatch is fixed.

--- a/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
+++ b/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
@@ -82,7 +82,8 @@
                               .DataTextField("SIcode")
                               .DataValueField("siCodeId")
                               .Filter(FilterType.Contains)
-                              .DataSource(source => source.Read(read => read.Action("AvailableSI", "Dispatch", new { @reqId = Model.RequisitionId, @ComID = Model.CommodityID }))))
+                              .DataSource(source => source.Read(read => read.Action("AvailableSI", "Dispatch", 
+                                    new { @reqDetailId = ViewBag.RequisitionDetailID, @siID = Model.ShippingInstructionID , @ComID = Model.CommodityID }))))
 
 
                     @Html.ValidationMessageFor(model => model.ShippingInstructionID)
