--- a/Web/Areas/PSNP/Views/RegionalPSNPPlanDetail/Index.cshtml
+++ b/Web/Areas/PSNP/Views/RegionalPSNPPlanDetail/Index.cshtml
@@ -368,7 +368,8 @@
 
 
         <script>
-
+            // Workflow Implementation
+            var history_link = "@Url.Action("History", "BusinessProcess", new { Area = "WorkflowManager", id = "0" })";
 
 
     function promot_workflow(BusinessProcessID, nextstate, actionname) {
