Finance menu is modidifed to make the Finance Data entry and Account (check officer ) not to see the same menus.

--- a/Web/Views/Shared/NewTheme_MainMenu.cshtml
+++ b/Web/Views/Shared/NewTheme_MainMenu.cshtml
@@ -763,7 +763,7 @@
                             <li>
                                 @Html.FinanceOperationMenuItem(@Html.Translate("Cheques"),
                                         @Url.Action("Index", "Cheque", new { Area = "Finance" }),
-                                        FinanceConstants.Operation.View_Payment_request_menu_items)
+                                        FinanceConstants.Operation.View_cheque_information)
                             </li>
                         </ul>
                     </li>
