CATS-1222, on regional dashboard incoming commodity unit measure is corrected to work based on the user preference

--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -469,7 +469,8 @@
                             <a href="javascript:;" class="dashboard-stat">
                                 <div class="details ">
                                     <span class="content number">Total Incoming Commodity</span>
-                                    <span class="value number">{{Data.IncomingCommodity|number}} QT </span>
+                                    <span class="value number">{{Data.IncomingCommodity|number}} <i class="cats-unit-pref"></i></span>
+
                                 </div>
                             </a>
                             <br>
