H.1.3.1 CATS-1257 Filter substitute SIs to those only having stock more than the dispatch plan remaining amount

--- a/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
+++ b/Web/Areas/Hub/Views/Dispatch/CreateDispatch.cshtml
@@ -73,8 +73,8 @@
         </div>
         <div class="span4">
             <div class="control-group">
-                <div class="control-label"> 
-                    @Html.LabelFor(model => model.SINumber)
+                <div class="control-label">
+                    @Html.LabelFor(model => model.ShippingInstructionID)
                 </div>
                 <div class="controls">
                     @(Html.Kendo().ComboBoxFor(m => m.ShippingInstructionID)
@@ -82,15 +82,16 @@
                               .DataTextField("SIcode")
                               .DataValueField("siCodeId")
                               .Filter(FilterType.Contains)
-                              .DataSource(source => source.Read(read => read.Action("AvailableSI", "Dispatch", 
-                                    new { @reqDetailId = ViewBag.RequisitionDetailID, @siID = Model.ShippingInstructionID , @ComID = Model.CommodityID }))))
+                              .DataSource(source => source.Read(read => read.Action("AvailableSI", "Dispatch",
+                                    new { @reqDetailId = ViewBag.RequisitionDetailID, @siID = Model.ShippingInstructionID, @ComID = Model.CommodityID, @DaID = Model.DispatchAllocationID }))))
 
 
                     @Html.ValidationMessageFor(model => model.ShippingInstructionID)
 
                 </div>
-               
+
             </div>
+
             <div class="control-group">
                 <div class="control-label">
                     @Html.LabelFor(model => model.Region)
