--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -538,6 +538,7 @@
                                         <tr class="" ng-repeat="Distribution in Distribtion">
                                             <td>{{Distribution.plan}}</td>
                                             <th>{{Distribution.Woreda}}</th>
+                                            <th>{{Distribution.Fdps}}</th>
                                            
 
                                         </tr>
