--- a/Web/Views/Shared/EditorTemplates/WoredaStockDistrAmhDPStart.cshtml
+++ b/Web/Views/Shared/EditorTemplates/WoredaStockDistrAmhDPStart.cshtml
@@ -7,8 +7,8 @@
 <input type="text" id="DistributionStartDatePref" class="cats-datepicker2" value="@Model" />
 
 <script type="text/javascript">
-    $(".cats-datepicker2").ethcal_datepicker();
-    $("#DistributionStartDatePref").click();
+    $("input[class='cats-datepicker2'][id='DistributionStartDatePref']").ethcal_datepicker();
+    $("input[class='cats-datepicker2'][id='DistributionStartDatePref']").click();
     var DistributionStartDatePrefHidden = $("input[placeholder='dd/mm/yyyy'][id='DistributionStartDatePref']");
     var DistributionStartDatePrefShown = $("input[class='cats-datepicker2'][id='DistributionStartDatePref']");
 
